demo-ebs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-ebs
spec:
  containers:
  - image: nginx:latest
    name: test-container
    volumeMounts:
    - mountPath: /test-ebs
      name: mongodata 
  volumes:
  - name: mongodata
    persistentVolumeClaim:
      claimName: ebs-pvc
