demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
      - containerPort: 80
  - name: alpine
    image: nginx:alpine
