backend-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: altamashbebal/classes-yt-app_backend1:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  # type: NodePort
  selector:
    app: backend
  # type: LoadBalancer  

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      # nodePort: 30001
