demo-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  # namespace: nginx
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - port: 8082
      targetPort: 80
      # nodePort: 30002
