external-sevice.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  # namespace: ingress-ns
spec:
  type: ExternalName
  externalName: hello-one.hello.svc.cluster.local #or any external svc
  ports:
  - port: 80 #specify the port of service you want to expose 
    targetPort: 80 #port of external service
