classes-app-yt-ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: classes-app-yt
  # tls:
    # - secretName: nginx-demo-com-tls
      # hosts:
        # - nginx-demo.com
spec:
  rules:
    - host: classes-app-yt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
