classes-app-yt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: classes-app-ingress
  # namespace: erog-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # - host: example.com
   - http:
      paths:
        - pathType: Exact
          backend:
            service:
              name: backend
              port:
                number: 80
          path: "/backend"


      paths:
        - pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
          path: "/"
