linode-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "*.altamashbebal.tech"
    # - shop.altamashbebal.tech
    # - altamashbebal.tech
    # - sample.altamashbebal.tech
    # - nodejs.altamashbebal.tech
    # - ok.altamashbebal.tech
    secretName: example-tls
  rules:
  - host: blog.altamashbebal.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-one
            port:
              number: 80  
  - host: shop.altamashbebal.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-two
            port:
              number: 80

  - host: altamashbebal.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80

  - host: sample.altamashbebal.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend
            port:
              number: 80

  - host: nodejs.altamashbebal.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend
            port:
              number: 80

  - host: ok.altamashbebal.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo-express-service
            port:
              number: 80
