youtube-ingress-demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: erog-app

---
apiVersion: v1
kind: Service
metadata:
  name: erog-app-svc
  namespace: erog-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: erog-app
  type: ClusterIP
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erog-app-ingress
  namespace: erog-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # - host: example.com
   - http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: erog-app-svc
              port:
                number: 80
          path: /*
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: erog-app
  namespace: erog-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: erog-app
  template:
    metadata:
      labels:
        app: erog-app
    spec:
      containers:
      - name: erog-app
        image: nginx
        ports:
        - containerPort: 80
